@@ -10,7 +10,6 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 import org.jboss.resteasy.client.jaxrs.ResteasyClient;
-import org.jboss.resteasy.client.jaxrs.ResteasyWebTarget;
 import org.openremote.agent.custom.ourgrid.OurgridBatteryAsset;
 import org.openremote.agent.protocol.mqtt.MQTTAgent;
 import org.openremote.agent.protocol.mqtt.MQTTAgentLink;
@@ -31,10 +30,6 @@ import org.openremote.model.protocol.ProtocolAssetService;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.syslog.SyslogCategory;
 import org.openremote.model.util.ValueUtil;
-import org.openremote.model.value.AttributeDescriptor;
-
-import com.google.common.cache.Cache;
-import com.google.common.cache.CacheBuilder;
 
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.client.Entity;
@@ -51,14 +46,17 @@ import static org.openremote.container.web.WebTargetBuilder.createClient;
  * <ul>
  *   <li>Establishes and manages connection to the MyGrid MQTT broker using configuration 
  *       from {@link MyGridAgent}</li>
- *   <li>Provisions {@link OurgridBatteryAsset} assets by polling the MyGrid OpenRemote HTTP API
- *       to retrieve assets of type {@link ModuleOneAsset} linked to the restricted MyGrid service user</li>
- *   <li>Automatically configures {@link MQTTAgentLink}s for each provisioned 
- *       {@link OurgridBatteryAsset}</li>
- * </ul>
  * 
- * <p><b>Note:</b> The current HTTP polling mechanism will be replaced with MQTT asset event subscriptions 
- * once <a href="https://github.com/openremote/openremote/issues/1902">issue #1902</a> is resolved.</p>
+ *   <li>Provisions {@link OurgridBatteryAsset} assets by initially querying the MyGrid OpenRemote HTTP API during startup and every minute thereafter
+ *       to retrieve assets of type ModuleOneAsset linked to the restricted MyGrid service user</li>
+ * 
+ *   <li>Subscribes to asset events via MQTT to provision the assets if they don't exist yet locally</li>
+ * 
+ *   <li>Subscribes to attribute events via MQTT to forward the attribute events to the internal message broker</li>
+ * 
+ *   <li>Automatically configures {@link MQTTAgentLink}s for each provisioned 
+ *       {@link OurgridBatteryAsset} for publishing specific attributes</li>
+ * </ul>
  * 
  * @see MyGridAgent
  * @see MyGridMQTTProtocol
@@ -70,18 +68,32 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
 
     private static final Logger LOG = SyslogCategory.getLogger(PROTOCOL, MyGridProtocol.class);
 
+    // Attribute events to process locally when received from the MyGrid MQTT broker
+    private static final String[] SYNCED_ATTRIBUTES = {
+        "power",
+        "energyLevel",
+        "powerSetpoint",
+        "energyLevelPercentage",
+    };
+
+    // Periodic sync task delay in milliseconds (1 minute)
+    private static final int PERIODIC_SYNC_TASK_INTERVAL = 60000;
+
     protected MyGridAgent agent;
     protected MyGridMQTTProtocol mqttProtocol;
     protected MQTT_IOClient mqttClient;
     protected Container container;
     protected ScheduledExecutorService scheduledExecutor;
-    protected ScheduledFuture<?> syncTask;
     protected ProtocolAssetService protocolAssetService;
     protected static final AtomicReference<ResteasyClient> resteasyClient = new AtomicReference<>();
+
+    // Periodic sync task handle
+    protected ScheduledFuture<?> periodicSyncTask;
 
     public MyGridProtocol(MyGridAgent agent) {
         this.agent = agent;
 
+        // Create the MQTT agent instance
         MQTTAgent mqttAgent = new MQTTAgent(agent.getName());
         mqttAgent.setId(agent.getId());
 
@@ -90,10 +102,9 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
         agent.getClientId().ifPresent(mqttAgent::setClientId);
         agent.isSecureMode().ifPresent(mqttAgent::setSecureMode);
         agent.getCertificateAlias().ifPresent(mqttAgent::setCertificateAlias);
-        agent.getPublishQoS().ifPresent(mqttAgent::setPublishQos);
-        agent.getSubscribeQoS().ifPresent(mqttAgent::setSubscribeQos);
         agent.getUsernamePassword().ifPresent(mqttAgent::setUsernamePassword);
-        agent.getResumeSession().ifPresent(mqttAgent::setResumeSession);
+
+        // Create the MQTT protocol instance
         this.mqttProtocol = new MyGridMQTTProtocol(mqttAgent);
     }
 
@@ -154,20 +165,47 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
         return mqttProtocol.onAgentAttributeChanged(event);
     }
 
+    protected void onConnectionStatusChanged(ConnectionStatus status) {
+        LOG.info("MyGrid protocol connection status changed: " + status);
+
+        // (Re)Subscribe to asset and attribute events when the connection is established to the MyGrid MQTT broker
+        if (status == ConnectionStatus.CONNECTED) {
+            LOG.info("MyGrid protocol connection established, subscribing to asset and attribute events");
+
+            // Asset events wildcard topic (example: mygrid/serviceuser/asset/#)
+            tryAddMQTTMessageConsumer(getAssetEventsTopic(), this::onMyGridAssetEvent, 3, 500);
+
+            // Attribute events wildcard topic (example: mygrid/serviceuser/attribute/+/#)
+            tryAddMQTTMessageConsumer(getAttributeEventsTopic(), this::onMyGridAttributeEvent, 3, 500);
+        } else {
+            LOG.info("MyGrid protocol connection lost, unsubscribing from asset and attribute events");
+            mqttCleanupMessageConsumers();
+        }
+    }
+
 
     @Override
     public void start(Container container) throws Exception {
+        LOG.info("MyGrid protocol starting");
         mqttProtocol.start(container);
+
         this.container = container;
         this.scheduledExecutor = container.getScheduledExecutor();
 
         this.mqttClient = this.mqttProtocol.getMQTTClient();
 
+        if (mqttClient != null) {
+            mqttClient.addConnectionStatusConsumer(this::onConnectionStatusChanged);
+         }
+
+        // Initialize the RESTEasy client for HTTP requests
         initResteasyClient();
 
-        // We are currently using a polling mechanism to sync assets because of a MQTT issue: https://github.com/openremote/openremote/issues/1902
-        // TODO: Replace this with MQTT asset event subscriptions when the issue is resolved
-        syncTask = scheduledExecutor.scheduleAtFixedRate(this::syncMyGridAssets, 1, 30, TimeUnit.SECONDS);
+        // Provision the assets from MyGrid (ModuleOneAsset)'s
+        syncMyGridAssets();
+
+        // Start the periodic sync task (attempts to sync the assets every minute)
+        periodicSyncTask = scheduledExecutor.scheduleAtFixedRate(this::syncMyGridAssets, PERIODIC_SYNC_TASK_INTERVAL, PERIODIC_SYNC_TASK_INTERVAL, TimeUnit.MILLISECONDS);
 
         LOG.info("MyGrid protocol started");
     }
@@ -176,13 +214,30 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
     public void stop(Container container) throws Exception {
         LOG.info("MyGrid protocol stopping");
 
-        // Cancel the sync task
-        if (syncTask != null) {
-            syncTask.cancel(false);
-            syncTask = null;
+        // Cleanup the MQTT client subscriptions
+        mqttCleanupMessageConsumers();
+
+        // Remove status consumer from the MQTT client
+        if (mqttClient != null) {
+            LOG.info("Removing connection status consumers from the MQTT client");
+            mqttClient.removeAllConnectionStatusConsumers();
+        }
+
+        // Cancel the periodic sync task
+        if (periodicSyncTask != null) {
+            LOG.info("Cancelling periodic asset sync task");
+            periodicSyncTask.cancel(false);
         }
 
         mqttProtocol.stop(container);
+
+        LOG.info("MyGrid protocol stopped");
+    }
+
+    protected void mqttCleanupMessageConsumers() {
+        if (mqttClient != null) {
+            mqttClient.removeAllMessageConsumers();
+        }
     }
 
     protected static void initResteasyClient() {
@@ -197,59 +252,43 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
     protected List<OurgridBatteryAsset> getBatteryAssets() {
         return protocolAssetService.findAssets(new AssetQuery().types(OurgridBatteryAsset.class))
             .stream()
-            .map(asset -> (OurgridBatteryAsset) asset)
-            .collect(Collectors.toList());
+            .map(OurgridBatteryAsset.class::cast)
+            .toList();
     }
 
 
     // Provision a new OurgridBatteryAsset with the respective MQTT Agent links
-    protected Optional<OurgridBatteryAsset> provisionBatteryAsset(String id) {
-        if (id == null) {
+    protected Optional<OurgridBatteryAsset> provisionBatteryAsset(Asset<?> asset) {
+        if (asset.getId() == null) {
             LOG.warning("Cannot build asset due to missing ID value");
             return Optional.empty();
         }
 
-        // Skip if asset is already provisioned
-        if (getBatteryAssets().stream().anyMatch(asset -> asset.getId().equals(id))) {
+        // Skip if asset is already provisioned!
+        if (getBatteryAssets().stream().anyMatch(a -> a.getId().equals(asset.getId()))) {
             return Optional.empty();
         }
 
-        // We set the name to the ID, MQTT attribute events do contain the asset name.
-        OurgridBatteryAsset batteryAsset = new OurgridBatteryAsset(id);
-        batteryAsset.setId(id);
+        OurgridBatteryAsset batteryAsset = new OurgridBatteryAsset(asset.getId());
+        batteryAsset.setId(asset.getId());
         batteryAsset.setParentId(this.agent.getId());
 
-        // Power attribute agent links (subscribe)
-        var powerAttribute = batteryAsset.getAttribute(OurgridBatteryAsset.POWER);
-        if (powerAttribute.isPresent()) {
-            var powerAttributeSubscribeTopic = getAttributeSubscribeTopic(id, OurgridBatteryAsset.POWER.getName());
-            powerAttribute.get().addOrReplaceMeta(
-                new MetaItem<>(AGENT_LINK, new MQTTAgentLink(this.agent.getId()).setSubscriptionTopic(powerAttributeSubscribeTopic))
-            );
-        }
+        // Update attributes with any existing values from the given asset
+        Arrays.stream(SYNCED_ATTRIBUTES)
+            .filter(attributeName -> batteryAsset.hasAttribute(attributeName) && asset.hasAttribute(attributeName))
+            .forEach(attributeName -> asset.getAttribute(attributeName).flatMap(Attribute::getValue).ifPresent(value -> batteryAsset.getAttribute(attributeName).ifPresent(attribute -> attribute.setValue(value))));
 
-        // Energy level attribute agent links (subscribe)
-        var energyLevelAttribute = batteryAsset.getAttribute(OurgridBatteryAsset.ENERGY_LEVEL);
-        if (energyLevelAttribute.isPresent()) {
-            var energyLevelAttributeSubscribeTopic = getAttributeSubscribeTopic(id, OurgridBatteryAsset.ENERGY_LEVEL.getName());
-            energyLevelAttribute.get().addOrReplaceMeta(
-                new MetaItem<>(AGENT_LINK, new MQTTAgentLink(this.agent.getId()).setSubscriptionTopic(energyLevelAttributeSubscribeTopic))
-            );
-        }
-
-        // Power setpoint attribute agent links (publish and subscribe)
+        // Add the MQTT publish agent link for the power setpoint attribute
         var powerSetpointAttribute = batteryAsset.getAttribute(OurgridBatteryAsset.POWER_SETPOINT);
         if (powerSetpointAttribute.isPresent()) {
-            var powerSetpointAttributeSubscribeTopic = getAttributeSubscribeTopic(id, OurgridBatteryAsset.POWER_SETPOINT.getName());
-            var powerSetpointAttributePublishTopic = getAttributePublishTopic(id, OurgridBatteryAsset.POWER_SETPOINT.getName());
+            var powerSetpointAttributePublishTopic = getAttributePublishTopic(batteryAsset.getId(), OurgridBatteryAsset.POWER_SETPOINT.getName());
             powerSetpointAttribute.get().addOrReplaceMeta(
                 new MetaItem<>(AGENT_LINK, new MQTTAgentLink(this.agent.getId())
-                .setPublishTopic(powerSetpointAttributePublishTopic)
-                .setSubscriptionTopic(powerSetpointAttributeSubscribeTopic))
+                .setPublishTopic(powerSetpointAttributePublishTopic))
             );
         }
 
-        // Merge the newly created battery asset
+        // Merge the OurgridBatteryAsset into the local OpenRemote instance
         try {
             protocolAssetService.mergeAsset(batteryAsset);
         } catch (Exception e) {
@@ -279,44 +318,40 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
         return getTopicPrefix() + "/attribute/+/#";
     }
 
-    // Return the topic for subscribing to a specific attribute value (example: mygrid/serviceuser/attributevalue/power/assetId)
-    protected String getAttributeSubscribeTopic(String assetId, String attributeName) {
-        return getTopicPrefix() + "/attributevalue/" + attributeName + "/" + assetId;
-    }
-
-    // Return the topic for publishing a specific attribute value (example: mygrid/serviceuser/writeattributevalue/power/assetId)
+    // Return the topic for publishing a specific attribute value
     protected String getAttributePublishTopic(String assetId, String attributeName) {
         return getTopicPrefix() + "/writeattributevalue/" + attributeName + "/" + assetId;
     }
 
-
-    // Simple cache for the auth token
+    // Simple record for the auth token
     record OAuthToken(String token, long expiresAtMillis) {}
-    OAuthToken cachedToken;
 
     // Sync the relevant assets (ModuleOneAsset) from MyGrid to the local OpenRemote instance
     protected void syncMyGridAssets() {
+        LOG.info("Syncing battery assets from MyGrid");
+
         String myGridRealm = this.agent.getMyGridRealm().orElseThrow(() -> new IllegalArgumentException("Agent mygrid realm was not configured"));
         String url = "https://" + this.agent.getHost().orElseThrow(() -> new IllegalArgumentException("Agent host was not configured"));
 
-        // Refresh the token if it is about to expire
-        if (cachedToken == null || cachedToken.expiresAtMillis() < System.currentTimeMillis() + 10000) {
-            Map<String, String> oAuthResponse = getMyGridOAuthToken(url, myGridRealm);
+        // Get the token before querying the assets
+        Map<String, String> oAuthResponse = getMyGridOAuthToken(url, myGridRealm);
 
-            if (oAuthResponse.isEmpty()) {
-                LOG.severe("Failed to get auth token response");
-                return;
-            }
-
-            String accessToken = oAuthResponse.get("access_token");
-            long expiresAtMillis = System.currentTimeMillis() + Long.parseLong(oAuthResponse.get("expires_in")) * 1000;
-            cachedToken = new OAuthToken(accessToken, expiresAtMillis);
+        if (oAuthResponse.isEmpty()) {
+            LOG.severe("Failed to get auth token response");
+            return;
         }
 
-        List<Asset<?>> mygridAssets = getMyGridAssets(url, myGridRealm, cachedToken.token());
+        String accessToken = oAuthResponse.get("access_token");
+        long expiresAtMillis = System.currentTimeMillis() + Long.parseLong(oAuthResponse.get("expires_in")) * 1000;
+        OAuthToken oAuthToken = new OAuthToken(accessToken, expiresAtMillis);
+    
+        // Query the assets
+        List<Asset<?>> mygridAssets = getMyGridAssets(url, myGridRealm, oAuthToken.token());
 
+        // Provision each asset
         mygridAssets.forEach(asset -> {
-           provisionBatteryAsset(asset.getId());
+           Optional<OurgridBatteryAsset> batteryAsset = provisionBatteryAsset(asset);
+           batteryAsset.ifPresent(ourgridBatteryAsset -> LOG.info("Battery asset created: " + ourgridBatteryAsset.getId()));
         });
     }
 
@@ -329,7 +364,7 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
         Map<String, Object> assetQuery = new HashMap<>();
 
         // Only query for ModuleOneAsset types
-        assetQuery.put("types", Arrays.asList("ModuleOneAsset"));
+        assetQuery.put("types", List.of(MYGRID_ASSET_TYPE));
 
         try (Response response = client.target(assetQueryUrl)
                 .request()
@@ -338,7 +373,7 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
                 .invoke()) {
             
             if (response.getStatus() == Response.Status.OK.getStatusCode()) {
-                return response.readEntity(new jakarta.ws.rs.core.GenericType<List<Asset<?>>>() {});
+                return response.readEntity(new jakarta.ws.rs.core.GenericType<>() {});
             }
             return Collections.emptyList();
         } catch (Exception e) {
@@ -361,7 +396,7 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
 
         ResteasyClient client = resteasyClient.get();
         jakarta.ws.rs.core.MultivaluedHashMap<String, String> formData = new jakarta.ws.rs.core.MultivaluedHashMap<>();
-        data.forEach((key, value) -> formData.add(key, value));
+        data.forEach(formData::add);
         
         try (Response response = client.target(url + "/auth/realms/" + realm + "/protocol/openid-connect/token")
                 .request()
@@ -379,9 +414,10 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
         }
     }
 
-        // Helper method for subscribing to a mqtt topic with a delay between retries, providing a retry mechanism
+        // Retry mechanism for subscribing to a MQTT topic with a delay between retries and a max number of retries
         protected void tryAddMQTTMessageConsumer(String topic, Consumer<MQTTMessage<String>> consumer, int maxRetries, long delayMs) {
             if (maxRetries <= 0) {
+                LOG.warning("Max retries reached for subscribing to " + topic);
                 return;
             }
     
@@ -389,9 +425,10 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
                 try {
                     boolean subscribed = mqttClient.addMessageConsumer(topic, consumer);
                     if (!subscribed) {
-                        LOG.warning("Failed to subscribe to MyGrid asset events");
+                        LOG.warning("Failed to subscribe to " + topic);
                         tryAddMQTTMessageConsumer(topic, consumer, maxRetries - 1, delayMs);
                     }
+                    LOG.info("Subscribed to " + topic);
                 } catch (Exception e) {
                     tryAddMQTTMessageConsumer(topic, consumer, maxRetries - 1, delayMs);
                 }
@@ -399,59 +436,61 @@ public class MyGridProtocol implements Protocol<MyGridAgent> {
         }
 
 
-    // protected void onMyGridAssetEvent(MQTTMessage<String> msg) {
-    //     SharedEvent event = ValueUtil.parse(msg.getPayload(), SharedEvent.class).orElse(null);
 
-    //     if (event instanceof AssetEvent assetEvent) {
-    //         if (!assetEvent.getAssetType().equals(MYGRID_ASSET_TYPE)) {
-    //             return; // Don't process unrelated asset types.
-    //         }
+    /*
+     * Asset Event Consumer
+     * Process the asset events from the MyGrid MQTT broker
+     * CREATE, UPDATE: provision the battery asset if it doesn't exist yet
+     * DELETE: delete the battery asset
+     */
+    protected void onMyGridAssetEvent(MQTTMessage<String> msg) {
+        SharedEvent event = ValueUtil.parse(msg.getPayload(), SharedEvent.class).orElse(null);
 
-    //         // Handle the asset event based on the cause
-    //         switch (assetEvent.getCause()) {
-    //             case UPDATE, CREATE :
-    //                 Optional<OurgridBatteryAsset> batteryAsset = provisionBatteryAsset(assetEvent.getAsset().getId());
-    //                 batteryAsset.ifPresent(ourgridBatteryAsset -> LOG.fine("Battery asset created: " + ourgridBatteryAsset.getId()));
-    //                 break;
-    //             case DELETE:
-    //                 protocolAssetService.deleteAssets(assetEvent.getAsset().getId());
-    //                 break;
-    //             default:
-    //                 break;
-    //         }
-    //     }
-    // }
+        if (event instanceof AssetEvent assetEvent) {
+            if (!assetEvent.getAssetType().equals(MYGRID_ASSET_TYPE)) {
+                return; // Don't process unrelated asset types.
+            }
 
-    // protected void onMyGridAttributeEvent(MQTTMessage<String> msg) {
-    //     SharedEvent event = ValueUtil.parse(msg.getPayload(), SharedEvent.class).orElse(null);
+            // Handle the asset event based on the cause
+            switch (assetEvent.getCause()) {
+                case CREATE, UPDATE:
+                    Optional<OurgridBatteryAsset> batteryAsset = provisionBatteryAsset(assetEvent.getAsset());
+                    batteryAsset.ifPresent(ourgridBatteryAsset -> LOG.fine("Battery asset created: " + ourgridBatteryAsset.getId()));
+                    break;
+                case DELETE:
+                    protocolAssetService.deleteAssets(assetEvent.getAsset().getId());
+                    break;
+                default:
+                    break;
+            }
+        }
+    }
 
-    //     if (event instanceof AttributeEvent attributeEvent) {
-    //         // AttributeEvent does not contain the asset type, so we need to do some extra work
-    //         // Check whether the event attributeName is a valid battery asset attribute via reflection
-    //         // We also assume the service user is only linked to valid assets, so this is a preventative check to prevent accidental misuse
-    //         String[] validFields = Arrays.stream(OurgridBatteryAsset.class.getFields())
-    //                 .filter(field -> AttributeDescriptor.class.isAssignableFrom(field.getType()))
-    //                 .map(field -> {
-    //                     try {
-    //                         field.setAccessible(true);
-    //                         AttributeDescriptor<?> descriptor = (AttributeDescriptor<?>) field.get(null);
-    //                         return descriptor.getName();
-    //                     } catch (IllegalAccessException e) {
-    //                         return null;
-    //                     }
-    //                 })
-    //                 .filter(Objects::nonNull)
-    //                 .toArray(String[]::new);
 
-    //         // Check if the attribute is considered valid e.g. present in the asset class we will provision
-    //         if (Arrays.stream(validFields).noneMatch(field -> field.equals(attributeEvent.getName()))) {
-    //             return; // Don't process unrelated attributes.
-    //         }
+    /*
+     * Attribute Event Consumer
+     * Process the attribute events from the MyGrid MQTT broker
+     * Forward the attribute event to the internal message broker for processing
+     * TODO: Add backpressure mechanism / processing queue if performance becomes an issue
+     */
+    protected void onMyGridAttributeEvent(MQTTMessage<String> msg) {
+        SharedEvent event = ValueUtil.parse(msg.getPayload(), SharedEvent.class).orElse(null);
 
-    //         // Try and provision the battery asset
-    //         Optional<OurgridBatteryAsset> batteryAsset = provisionBatteryAsset(attributeEvent.getRef().getId());
-    //         batteryAsset.ifPresent(ourgridBatteryAsset -> LOG.fine("Battery asset created: " + ourgridBatteryAsset.getId()));
-    //     }
-    // }
+        // Forward the attribute event to the internal message broker
+        if (event instanceof AttributeEvent attributeEvent) {
+
+            // Process the attribute event if SYNCED_ATTRIBUTES contains the attribute name
+            if (Arrays.asList(SYNCED_ATTRIBUTES).contains(attributeEvent.getName())) {
+                LOG.info("Processing external attribute event: " + attributeEvent.getName() + " for asset " + attributeEvent.getId() + " with new value " + attributeEvent.getValue());
+                
+                // Ensure the attribute event is updated to the agent's realm
+                attributeEvent.setRealm(this.agent.getRealm());
+
+                // Process the attribute event
+                protocolAssetService.sendAttributeEvent(attributeEvent);
+            }
+           
+        }
+    }
 
 }
